--- a/Quiz/Q1.md
+++ b/Quiz/Q1.md
@@ -5,4 +5,5 @@
 ## Questions
 |n|Question|Answer|
 |-|--------|------|
-|1||
+|1|What is the default wait time in Cypress<br/>&ensp;4 sec<br/>&ensp;8 sec|<details><summary>Answer</summary>4 sec</details>|
+|2|Cypress adds automatic waits for Assertions<br/>&ensp;true<br/>&ensp;false|<details><summary>Answer</summary>true<br/></details>|
