--- a/Quiz/Q1.md
+++ b/Quiz/Q1.md
@@ -6,4 +6,4 @@
 |n|Question|Answer|
 |-|--------|------|
 |1|What is the default wait time in Cypress<br/>&ensp;4 sec<br/>&ensp;8 sec|<details><summary>Answer</summary>4 sec</details>|
-|2|Cypress adds automatic waits for Assertions<br/>&ensp;true<br/>&ensp;false|<details><summary>Answer</summary>true<br/><br/><ins>explication</ins><br/>assertion Implicit assertions with `.should()` or `.and()`<br/>`cy.get('h1').should('contain', 'Welcome')`<br/>`cy.get('button').should('be.visible').and('not.be.disabled')`<br/><br/>Explicit assertions with `expect()` or `assert`<br/>`cy.get('h1').then(($el) => {`<br/>`expect($el.text()).to.equal('Welcome')`<br/>`})`<br/><br/>`cy.get('h1').then(($el) => {`<br/>`assert.equal($el.text(), 'Welcome')`<br/>`})`</details>|
+|2|Cypress adds automatic waits for Assertions<br/>&ensp;true<br/>&ensp;false|<details><summary>Answer</summary>true<br/><br/><ins>explication</ins><br/>It is an instruction that checks whether a condition is true during the execution of a test.<br/>assertion Implicit assertions with `.should()` or `.and()`<br/>`cy.get('h1').should('contain', 'Welcome')`<br/>`cy.get('button').should('be.visible').and('not.be.disabled')`<br/><br/>Explicit assertions with `expect()` or `assert`<br/>`cy.get('h1').then(($el) => {`<br/>`expect($el.text()).to.equal('Welcome')`<br/>`})`<br/><br/>`cy.get('h1').then(($el) => {`<br/>`assert.equal($el.text(), 'Welcome')`<br/>`})`</details>|
