--- a/Quiz/Q1.md
+++ b/Quiz/Q1.md
@@ -7,3 +7,11 @@
 |-|--------|------|
 |1|What is the default wait time in Cypress<br/>&ensp;4 sec<br/>&ensp;8 sec|<details><summary>Answer</summary>4 sec</details>|
 |2|Cypress adds automatic waits for Assertions<br/>&ensp;true<br/>&ensp;false|<details><summary>Answer</summary>true<br/><br/><ins>explication</ins><br/>It is an instruction that checks whether a condition is true during the execution of a test.<br/><br/>assertion Implicit assertions with `.should()` or `.and()`<br/>`cy.get('h1').should('contain', 'Welcome')`<br/>`cy.get('button').should('be.visible').and('not.be.disabled')`<br/><br/>Explicit assertions with `expect()` or `assert`<br/>`cy.get('h1').then(($el) => {`<br/>`expect($el.text()).to.equal('Welcome')`<br/>`})`<br/><br/>`cy.get('h1').then(($el) => {`<br/>`assert.equal($el.text(), 'Welcome')`<br/>`})`</details>|
+|3|Cypress can be installed on<br/>&ensp;Windows<br/>&ensp;Mac<br/>&ensp;Linux<br/>&ensp;All the above|<details><summary>Answer</summary>All the above</details>	|
+|4|Cypress can be installed using Node JS OR direct download<br/>&ensp;Yes<br/>&ensp;No|<details><summary>Answer</summary>Yes</details>|
+|5|In Cypress we cannot give custom waits<br/>&ensp;True<br/>&ensp;False|<details><summary>Answer</summary>False</details>|
+|6|What is the command to open cypress ui<br/>&ensp;cypress run<br/>&ensp;cypress open<br/>&ensp;cypress ui|<details><summary>Answer</summary>Cypress open</details>|
+|7|Cypress uses Selenium WebDriver<br/>&ensp;True<br/>&ensp;False|<details><summary>Answer</summary>False</details>|
+|8|Cypress can be used for Unit Testing<br/>&ensp;True<br/>&ensp;False|<details><summary>Answer</summary>True</details>|
+|9|Users can overwrite exiting cypress commands<br/>&ensp;Yes<br/>&ensp;No|<details><summary>Answer</summary>Yes</details>|
+|10|What is the command to initialize a node project in a folder<br/>&ensp;npm init -y<br/>&enps;npm start<br/>&ensp;npm project|<details><summary>Answer</summary>npm init -y</details>|
