--- a/Quiz/Q1.md
+++ b/Quiz/Q1.md
@@ -14,4 +14,4 @@
 |7|Cypress uses Selenium WebDriver<br/>&ensp;True<br/>&ensp;False|<details><summary>Answer</summary>False</details>|
 |8|Cypress can be used for Unit Testing<br/>&ensp;True<br/>&ensp;False|<details><summary>Answer</summary>True</details>|
 |9|Users can overwrite exiting cypress commands<br/>&ensp;Yes<br/>&ensp;No|<details><summary>Answer</summary>Yes</details>|
-|10|What is the command to initialize a node project in a folder<br/>&ensp;npm init -y<br/>&enps;npm start<br/>&ensp;npm project|<details><summary>Answer</summary>npm init -y</details>|
+|10|What is the command to initialize a node project in a folder<br/>&ensp;npm init -y<br/>&ensp;npm start<br/>&ensp;npm project|<details><summary>Answer</summary>npm init -y</details>|
